--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
 .navbar li a.active{color: #ffb671;}
 
 .section1{
-    background-image: url(image/cover2.jpg);
+    background-image: url(Image/cover2.jpg);
     height: 100vh;
     width: 100%;
     background-size: cover;
